# kafka_oneshot

./: Cargo.toml
src/: main.rs
