[package]
name = "kafka_oneshot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
do-notation = "0.1.3"
futures = "0.3.29"
openssl = "0.10.59"
rdkafka = { version = "0.36.0", features = [
  "ssl-vendored",
  "gssapi",
  "libz",
  "zstd",
] }
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["full"] }
